@@ -120,4 +120,5 @@ ATTR_rsvsync,
 ATTR_start,
 ATTR_acllogic,  /* contributed by USC */
 ATTR_aclgrpslpy,
+ATTR_keepcompleted,
 
