@@ -19,6 +19,7 @@
   torque.spec updates (USC)
   remove the leading space on the node session attribute on darwin (USC)
   prevent SEGV if config file is missing/corrupt
+  "keep_completed" execution queue attribute
 
 2.0.0p4
 
